// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Layout addon panel in right 1`] = `
<div
  class="css-u5kmrx"
>
  <div
    class="SplitPane  vertical "
    style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
  >
    <div
      class="Pane vertical Pane1  "
      style="flex:none;position:relative;outline:none;width:250px"
    >
      <div
        class="css-1kbxkw2"
      >
        <div
          class="css-9in0fq"
        >
          <div
            style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
          >
            Stories
          </div>
        </div>
        <div
          class="css-owlojx"
          direction="vertical"
        >
          <div
            class="css-19oxd4p"
            direction="vertical"
          />
        </div>
      </div>
    </div>
    <span
      class="Resizer vertical "
      style="cursor:col-resize;height:auto;width:10px;z-index:1"
    />
    <div
      class="Pane vertical Pane2  "
      style="flex:1;position:relative;outline:none"
    >
      <div
        class="SplitPane  vertical "
        style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
      >
        <div
          class="Pane vertical Pane1  "
          style="flex:1;position:relative;outline:none"
        >
          <div
            class="css-1e1vreg"
          >
            <div
              class="css-1nsb3py"
            />
            <div
              class="css-1xkk3c8"
            >
              <div
                style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
              >
                Preview
              </div>
            </div>
          </div>
        </div>
        <span
          class="Resizer vertical "
          style="cursor:col-resize;height:100%;width:10px;z-index:1"
        />
        <div
          class="Pane vertical Pane2  "
          style="flex:none;position:relative;outline:none;width:400px"
        >
          <div
            class="css-1929wko"
          >
            <div
              class="css-nq4yle"
              direction="vertical"
            >
              <div
                class="css-19oxd4p"
                direction="vertical"
              />
            </div>
            <div
              style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
            >
              Addon
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Layout default 1`] = `
<div
  class="css-u5kmrx"
>
  <div
    class="SplitPane  vertical "
    style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
  >
    <div
      class="Pane vertical Pane1  "
      style="flex:none;position:relative;outline:none;width:250px"
    >
      <div
        class="css-1kbxkw2"
      >
        <div
          class="css-9in0fq"
        >
          <div
            style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
          >
            Stories
          </div>
        </div>
        <div
          class="css-owlojx"
          direction="vertical"
        >
          <div
            class="css-19oxd4p"
            direction="vertical"
          />
        </div>
      </div>
    </div>
    <span
      class="Resizer vertical "
      style="cursor:col-resize;height:auto;width:10px;z-index:1"
    />
    <div
      class="Pane vertical Pane2  "
      style="flex:1;position:relative;outline:none"
    >
      <div
        class="SplitPane  horizontal "
        style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;bottom:0;flex-direction:column;min-height:100%;top:0;width:100%"
      >
        <div
          class="Pane horizontal Pane1  "
          style="flex:1;position:relative;outline:none"
        >
          <div
            class="css-xlbk67"
          >
            <div
              class="css-1nsb3py"
            />
            <div
              class="css-1xkk3c8"
            >
              <div
                style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
              >
                Preview
              </div>
            </div>
          </div>
        </div>
        <span
          class="Resizer horizontal "
          style="cursor:row-resize;height:10px;width:100%;z-index:1"
        />
        <div
          class="Pane horizontal Pane2  "
          style="flex:none;position:relative;outline:none;height:200px;display:flex"
        >
          <div
            class="css-1fxkhug"
          >
            <div
              class="css-1fpokv0"
              direction="horizontal"
            >
              <div
                class="css-1nvj8jd"
                direction="horizontal"
              />
            </div>
            <div
              style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
            >
              Addon
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Layout full screen 1`] = `
<div
  class="css-u5kmrx"
>
  <div
    class="SplitPane  vertical disabled"
    style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
  >
    <div
      class="Pane vertical Pane1  "
      style="flex:none;position:relative;outline:none;width:1px"
    >
      <div
        class="css-1aqo4nl"
      >
        <div
          class="css-9in0fq"
        >
          <div
            style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
          >
            Stories
          </div>
        </div>
        <div
          class="css-owlojx"
          direction="vertical"
        >
          <div
            class="css-19oxd4p"
            direction="vertical"
          />
        </div>
      </div>
    </div>
    <span
      class="Resizer vertical disabled"
      style="height:auto;width:10px;z-index:1"
    />
    <div
      class="Pane vertical Pane2  "
      style="flex:1;position:relative;outline:none"
    >
      <div
        class="SplitPane  horizontal disabled"
        style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;bottom:0;flex-direction:column;min-height:100%;top:0;width:100%"
      >
        <div
          class="Pane horizontal Pane1  "
          style="flex:1;position:relative;outline:none"
        >
          <div
            class="css-xlbk67"
          >
            <div
              class="css-1nsb3py"
            />
            <div
              class="css-15swx87"
            >
              <div
                style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
              >
                Preview
              </div>
            </div>
          </div>
        </div>
        <span
          class="Resizer horizontal disabled"
          style="height:10px;width:100%;z-index:1"
        />
        <div
          class="Pane horizontal Pane2  "
          style="flex:none;position:relative;outline:none;height:1px;display:flex"
        >
          <div
            class="css-1vc1w07"
          >
            <div
              class="css-1fpokv0"
              direction="horizontal"
            >
              <div
                class="css-1nvj8jd"
                direction="horizontal"
              />
            </div>
            <div
              style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
            >
              Addon
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Layout mobile 1`] = `
<div
  class="css-1dlj6ug"
>
  <div>
    <div
      class="css-1kes5pl"
    >
      <div
        class="css-64377y"
      >
        <button
          class="css-1540u6r"
          role="tab"
          type="button"
        >
          Navigator
        </button>
        <button
          class="css-133zstr"
          role="tab"
          selected=""
          type="button"
        >
          Preview
        </button>
        <button
          class="css-1540u6r"
          role="tab"
          type="button"
        >
          Addons
        </button>
      </div>
    </div>
    <div
      class="css-1hyfx7x"
    >
      <div
        class="css-9in0fq"
      >
        <div
          style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
        >
          Stories
        </div>
      </div>
    </div>
    <div
      class="css-1p46ag7"
      selected=""
    >
      <div
        class="css-9in0fq"
      >
        <div
          style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
        >
          Preview
        </div>
      </div>
    </div>
    <div
      class="css-1hyfx7x"
    >
      <div
        style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
      >
        Addon
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Layout no addon panel 1`] = `
<div
  class="css-u5kmrx"
>
  <div
    class="SplitPane  vertical "
    style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
  >
    <div
      class="Pane vertical Pane1  "
      style="flex:none;position:relative;outline:none;width:250px"
    >
      <div
        class="css-1kbxkw2"
      >
        <div
          class="css-9in0fq"
        >
          <div
            style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
          >
            Stories
          </div>
        </div>
        <div
          class="css-owlojx"
          direction="vertical"
        >
          <div
            class="css-19oxd4p"
            direction="vertical"
          />
        </div>
      </div>
    </div>
    <span
      class="Resizer vertical "
      style="cursor:col-resize;height:auto;width:10px;z-index:1"
    />
    <div
      class="Pane vertical Pane2  "
      style="flex:1;position:relative;outline:none"
    >
      <div
        class="SplitPane  horizontal disabled"
        style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;bottom:0;flex-direction:column;min-height:100%;top:0;width:100%"
      >
        <div
          class="Pane horizontal Pane1  "
          style="flex:1;position:relative;outline:none"
        >
          <div
            class="css-xlbk67"
          >
            <div
              class="css-1nsb3py"
            />
            <div
              class="css-1xkk3c8"
            >
              <div
                style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
              >
                Preview
              </div>
            </div>
          </div>
        </div>
        <span
          class="Resizer horizontal disabled"
          style="height:10px;width:100%;z-index:1"
        />
        <div
          class="Pane horizontal Pane2  "
          style="flex:none;position:relative;outline:none;height:1px;display:flex"
        >
          <div
            class="css-1vc1w07"
          >
            <div
              class="css-1fpokv0"
              direction="horizontal"
            >
              <div
                class="css-1nvj8jd"
                direction="horizontal"
              />
            </div>
            <div
              style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
            >
              Addon
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Layout no stories panel 1`] = `
<div
  class="css-u5kmrx"
>
  <div
    class="SplitPane  vertical disabled"
    style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
  >
    <div
      class="Pane vertical Pane1  "
      style="flex:none;position:relative;outline:none;width:1px"
    >
      <div
        class="css-1aqo4nl"
      >
        <div
          class="css-9in0fq"
        >
          <div
            style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
          >
            Stories
          </div>
        </div>
        <div
          class="css-owlojx"
          direction="vertical"
        >
          <div
            class="css-19oxd4p"
            direction="vertical"
          />
        </div>
      </div>
    </div>
    <span
      class="Resizer vertical disabled"
      style="height:auto;width:10px;z-index:1"
    />
    <div
      class="Pane vertical Pane2  "
      style="flex:1;position:relative;outline:none"
    >
      <div
        class="SplitPane  horizontal "
        style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;bottom:0;flex-direction:column;min-height:100%;top:0;width:100%"
      >
        <div
          class="Pane horizontal Pane1  "
          style="flex:1;position:relative;outline:none"
        >
          <div
            class="css-xlbk67"
          >
            <div
              class="css-1nsb3py"
            />
            <div
              class="css-1xkk3c8"
            >
              <div
                style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
              >
                Preview
              </div>
            </div>
          </div>
        </div>
        <span
          class="Resizer horizontal "
          style="cursor:row-resize;height:10px;width:100%;z-index:1"
        />
        <div
          class="Pane horizontal Pane2  "
          style="flex:none;position:relative;outline:none;height:200px;display:flex"
        >
          <div
            class="css-1fxkhug"
          >
            <div
              class="css-1fpokv0"
              direction="horizontal"
            >
              <div
                class="css-1nvj8jd"
                direction="horizontal"
              />
            </div>
            <div
              style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
            >
              Addon
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
